ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Settlement_Condition__c/Settlement_Condition__c.object-meta.xml
<CustomObject>
    <description>Used to capture Settlement Conditions against a Claim Case</description>
    <label>Settlement Condition</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Settlement Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlement Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>