ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Settlement_Condition__c/fields/Condition_Template__c.field-meta.xml
<CustomField>
    <fullName>Condition_Template__c</fullName>
    <description>Used to select default text of condition</description>
    <label>Condition Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Ventilation must be upgraded....</fullName>
            </value>
            <value>
                <fullName>2. Extended downspouts to direct....</fullName>
            </value>
            <value>
                <fullName>3. Soffit ventilation must be cleared...</fullName>
            </value>
            <value>
                <fullName>4. Deck must be repaired...</fullName>
            </value>
            <value>
                <fullName>5. New shingles must be installed ...</fullName>
            </value>
            <value>
                <fullName>Free entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>