ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Settlement_Condition__c/fields/Condition_Text__c.field-meta.xml
<CustomField>
    <fullName>Condition_Text__c</fullName>
    <description>Text that will appear in Offer Letter</description>
    <label>Condition Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>