ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Settlement_Condition__c/validationRules/BlockUpdateWhenCaseApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockUpdateWhenCaseApproved</fullName>
    <active>true</active>
    <description>When the Case is already marked as approved, no further settlement conditions should be added / updated</description>
    <errorConditionFormula>Case__r.ClaimApproved__c</errorConditionFormula>
    <errorMessage>Settlement Conditions cannot be added/updated after a Claim Case is approved</errorMessage>
</ValidationRule>